// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`GUI Label correctly renders a "guilabel" role 1`] = `
<DocumentFragment>
  <span
    class="Text-module__2xN8W_text Text-module__2xN8W_body colorScheme-module_uDd7va_auto guilabel guilabel"
    data-display="p"
  >
    Yes
  </span>
</DocumentFragment>
`;

exports[`Highlight correctly renders a "highlight-blue" role 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #E1F7FF;
}

<span
    class="emotion-0"
  >
    I am so blue
  </span>
</DocumentFragment>
`;
